Enhance SEO and layout for painting services page
Updated the title and meta description for better SEO and clarity. Adjusted styles for header, main, and footer sections for improved layout and presentation.

--- a/services/painting-decorating.html
+++ b/services/painting-decorating.html
@@ -1,151 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Painting & Decorating Services | Askern & Doncaster</title>
-<meta name="description" content="Professional painting and decorating services in Askern and Doncaster. Interior and exterior painting, wallpapering, preparation work and high-quality finishes.">
+<title>Painting & Decorating Services | Askern & Doncaster DN6</title>
+<meta name="description" content="Professional painting and decorating services in Askern & Doncaster DN6. Interior painting, decorating, wall repairs, glossing, wallpaper removal, preparation and more. Local, friendly and affordable.">
+
 <style>
-body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #fff; color: #333; }
-header, main, footer { padding: 20px; max-width: 900px; margin: auto; }
-h1, h2, h3 { font-weight: 700; }
-section { margin-bottom: 40px; }
-ul { padding-left: 20px; }
-form label { display: block; margin-top: 10px; }
-form input, form textarea { width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px; }
-button { margin-top: 15px; padding: 10px 18px; background: #333; color: #fff; border: none; cursor: pointer; }
-button:hover { background: #555; }
+body {
+margin: 0;
+font-family: Arial, sans-serif;
+background: #ffffff;
+color: #000;
+line-height: 1.6;
+}
+
+/* HEADER */
+header {
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 15px 20px;
+background-color: #f4f4f4;
+border-bottom: 2px solid #ddd;
+}
+
+header img {
+height: 90px;
+}
+
+nav a {
+margin-left: 20px;
+font-size: 18px;
+font-weight: bold;
+text-decoration: none;
+color: #000;
+padding: 10px;
+border-radius: 6px;
+}
+
+nav a:hover {
+background: #e2e2e2;
+}
+
+main {
+padding: 20px;
+max-width: 900px;
+margin: auto;
+}
+
+h1, h2 {
+margin-top: 10px;
+}
+
+/* Quick Facts */
+.quick-facts {
+background: #f8f8f8;
+padding: 20px;
+border-radius: 10px;
+border: 1px solid #ddd;
+margin: 25px 0;
+}
+
+.quick-facts ul {
+padding-left: 20px;
+}
+
+/* Footer */
+footer {
+text-align: center;
+padding: 25px;
+font-size: 14px;
+color: #666;
+margin-top: 40px;
+border-top: 1px solid #ddd;
+}
+
+footer a {
+color: #1864d8;
+font-weight: bold;
+text-decoration: none;
+}
+
+footer a:hover {
+text-decoration: underline;
+}
 </style>
-</head>
 
-<body>
-
-<header>
-<h1>Painting & Decorating Services in Askern & Doncaster</h1>
-<p>Your local, reliable painter and decorator providing high-quality finishes for homes and commercial properties across Doncaster and South Yorkshire.</p>
-</header>
-
-<main>
-
-<section id="intro">
-<h2>Professional Painting & Decorating</h2>
-<p>I offer a complete range of interior and exterior decorating services designed to refresh, protect and transform your property. Every project is completed with care, attention to detail and a commitment to high standards.</p>
-</section>
-
-<section id="services">
-<h2>What I Offer</h2>
-
-<h3>Interior Painting</h3>
-<p>High-quality interior painting using durable paints for walls, ceilings, radiators, woodwork and more. Clean, tidy and precise finishes throughout your home or business.</p>
-
-<h3>Wallpaper Hanging</h3>
-<p>Expert hanging of all wallpaper types including patterned paper, feature walls, lining paper, textured designs and murals.</p>
-
-<h3>Surface Preparation</h3>
-<p>Thorough preparation including sanding, filling, caulking, stain blocking and priming to ensure smooth, long-lasting results.</p>
-
-<h3>Woodwork Painting</h3>
-<p>Doors, skirting boards, staircases, frames, windows and other interior woodwork painted to a flawless finish.</p>
-
-<h3>Ceiling & Feature Wall Treatments</h3>
-<p>From crisp white ceilings to bold feature walls, I create clean, modern finishes tailored to your style.</p>
-
-<h3>Exterior Painting (Optional)</h3>
-<p>Although this page focuses on interior decorating, I also offer full exterior painting if required.</p>
-
-</section>
-
-<section id="why-choose">
-<h2>Why Choose My Decorating Services?</h2>
-<ul>
-<li>Local decorator based in Askern, serving all of Doncaster</li>
-<li>Reliable, friendly and professional</li>
-<li>High-quality workmanship and attention to detail</li>
-<li>Clean, tidy and respectful of your home</li>
-<li>Honest, clear pricing with no hidden costs</li>
-<li>Fully insured for peace of mind</li>
-</ul>
-</section>
-
-<section id="areas">
-<h2>Areas Covered</h2>
-<p>I provide painting and decorating services across:</p>
-<ul>
-<li>Askern</li>
-<li>Doncaster</li>
-<li>Campsall</li>
-<li>Norton</li>
-<li>Carcroft</li>
-<li>Skellow</li>
-<li>Bentley</li>
-<li>Adwick</li>
-<li>South Yorkshire</li>
-</ul>
-</section>
-
-<section id="contact">
-<h2>Request a Free Quote</h2>
-<p>Tell me a little about your project and I’ll get back to you as soon as possible.</p>
-
-<form action="https://formsubmit.co/andrewsinclair2307@gmail.com" method="POST">
-<label for="name">Name</label>
-<input type="text" id="name" name="name" required>
-
-<label for="email">Email</label>
-<input type="email" id="email" name="email" required>
-
-<label for="message">How can I help?</label>
-<textarea id="message" name="message" rows="5" required></textarea>
-
-<button type="submit">Send Message</button>
-</form>
-</section>
-
-<section id="faq">
-<h2>Frequently Asked Questions</h2>
-
-<h3>How long does interior paint last?</h3>
-<p>Most good-quality interior paint lasts 5–10 years depending on usage and surface condition.</p>
-
-<h3>Do you help with colour choices?</h3>
-<p>Yes, I can recommend colours, finishes and paint types based on your space and lighting.</p>
-
-<h3>Do you work in furnished homes?</h3>
-<p>Absolutely — I protect all furnishings, flooring and belongings throughout the project.</p>
-
-<h3>Can I request both painting and wallpapering?</h3>
-<p>Yes, I can combine any decorating services to suit your project.</p>
-
-</section>
-
-</main>
-
-<footer>
-<p>&copy; <span id="year"></span> Painting & Decorating | Askern, Doncaster</p>
-</footer>
-
-<script>
-document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-
+<!-- SCHEMA.ORG -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "Service",
-"name": "Painting and Decorating",
-"description": "Professional interior painting, wallpapering and decorating services in Askern and Doncaster.",
+"name": "Painting & Decorating",
+"serviceType": "Interior & exterior painting and decorating services",
 "provider": {
 "@type": "LocalBusiness",
-"name": "Andrew Sinclair Painter & Decorator",
+"name": "Home Maintenance Services",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "UK"
+},
+"telephone": "+447735873694"
+},
+"areaServed": {
+"@type": "Place",
 "address": {
 "@type": "PostalAddress",
 "addressLocality": "Askern",
 "addressRegion": "Doncaster",
 "addressCountry": "UK"
-},
-"url": "https://www.andrewsinclairpainterdecorator.co.uk"
-},
-"areaServed": "Askern, Doncaster, South Yorkshire"
+}
+}
 }
 </script>
 
@@ -156,66 +127,106 @@ document.getElementById("year").textContent = new Date().getFullYear();
 "mainEntity": [
 {
 "@type": "Question",
-"name": "How long does interior paint last?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Interior paint typically lasts 5–10 years depending on surface condition and usage."
-}
+"name": "Do you offer small painting jobs?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, no job is too small. I handle anything from a single wall to full home decorating." }
 },
 {
 "@type": "Question",
-"name": "Do you help with colour choices?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, personalised colour advice is available to help match your style and lighting."
-}
+"name": "Do you supply the paint?",
+"acceptedAnswer": { "@type": "Answer", "text": "I can supply paint or you can choose your own. I use trusted brands for high-quality, long-lasting finishes." }
 },
 {
 "@type": "Question",
-"name": "Do you work in furnished homes?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes. All flooring, fixtures and furnishings are fully protected during the project."
-}
-},
-{
-"@type": "Question",
-"name": "Can I request both painting and wallpapering?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, painting and wallpapering services can be combined to suit your project."
-}
+"name": "Which areas do you cover?",
+"acceptedAnswer": { "@type": "Answer", "text": "I cover Askern, Doncaster DN6, and the surrounding South Yorkshire areas." }
 }
 ]
 }
 </script>
 
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "BreadcrumbList",
-"itemListElement": [
-{
-"@type": "ListItem",
-"position": 1,
-"name": "Home",
-"item": "https://www.andrewsinclairpainterdecorator.co.uk"
-},
-{
-"@type": "ListItem",
-"position": 2,
-"name": "Services",
-"item": "https://www.andrewsinclairpainterdecorator.co.uk/services"
-},
-{
-"@type": "ListItem",
-"position": 3,
-"name": "Painting & Decorating",
-"item": "https://www.andrewsinclairpainterdecorator.co.uk/services/painting-decorating"
-}
-]
-}
-</script>
+</head>
+
+<body>
+
+<header>
+<img src="/logo.png" alt="Home Maintenance Services Logo">
+<nav>
+<a href="/">Home</a>
+<a href="/services">Services</a>
+<a href="/contact">Contact</a>
+</nav>
+</header>
+
+<main>
+
+<h1>Painting & Decorating Services in Askern & Doncaster (DN6)</h1>
+
+<p>
+I provide professional, tidy and reliable painting and decorating services throughout
+<strong>Askern, Doncaster and the DN6 area</strong>. Whether you're refreshing a single room
+or redecorating your entire home, I offer high-quality workmanship, careful preparation and
+fair, honest pricing.
+</p>
+
+<h2>Interior Painting & Decorating</h2>
+<ul>
+<li>Walls, ceilings and woodwork</li>
+<li>Glossing, satin and eggshell finishes</li>
+<li>Full-room and full-house decorating</li>
+<li>Wall repairs and plaster patching</li>
+<li>Stain blocking and damp seal primer</li>
+<li>Radiator painting</li>
+</ul>
+
+<h2>Wallpaper Removal & Preparation</h2>
+<ul>
+<li>Wallpaper stripping and disposal</li>
+<li>Surface repair and smoothing</li>
+<li>Crack filling and hole repairs</li>
+<li>Mould treatment and stain blocking</li>
+</ul>
+
+<h2>Woodwork & Detail Finishing</h2>
+<ul>
+<li>Doors, skirting boards & architraves</li>
+<li>Window frames and sills</li>
+<li>Staircase painting</li>
+<li>Glossing, varnishing and staining</li>
+</ul>
+
+<h2>Quick Facts</h2>
+<div class="quick-facts">
+<ul>
+<li>Local decorator based in <strong>Askern, Doncaster DN6</strong></li>
+<li>No call-out fee</li>
+<li>Friendly, clean and reliable service</li>
+<li>High-quality paints and long-lasting finishes</li>
+<li>Most small jobs completed the same day</li>
+<li>Free quotes with no obligation</li>
+<li>Fully insured for peace of mind</li>
+</ul>
+</div>
+
+<h2>Areas I Cover</h2>
+<p>
+Askern, Doncaster, Campsall, Norton, Carcroft, Skellow, Adwick, Bentley and surrounding areas in South Yorkshire.
+</p>
+
+<h2>Get a Free Quote</h2>
+<p>
+If you’d like to refresh your home or need help with a decorating project, feel free to get in touch.
+I’m always happy to offer advice and provide a free, no-obligation quote.
+</p>
+
+<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+
+</main>
+
+<footer>
+© 2025 Home Maintenance Services – Askern, Doncaster DN6
+<br><br>
+<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+</footer>
 
 </body>
 </html>
