--- a/services/painting-decorating.html
+++ b/services/painting-decorating.html
@@ -152,6 +152,7 @@ text-decoration: underline;
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
+<a href="/contact">Contact</a>
 </nav>
 </header>
 
