--- a/services/gutter-repair-replacement.html
+++ b/services/gutter-repair-replacement.html
@@ -223,6 +223,7 @@ outline: 3px solid #000;
 <img src="../logo.png" alt="Home Maintenance Services Logo">
 <nav role="navigation" aria-label="Main Navigation">
 <a href="https://steely1968.github.io/">Home</a>
+<a href="/contact">Contact</a>
 </nav>
 <a class="call-button" href="tel:07735873694" aria-label="Call Home Maintenance Services">Call 07735 873694</a>
 </header>
