--- a/services/general-home-repairs.html
+++ b/services/general-home-repairs.html
@@ -249,6 +249,7 @@ font-weight: bold;
 <img src="../logo.png" alt="Home Maintenance Services logo">
 <nav>
 <a class="home-link" href="https://steely1968.github.io/">Home</a>
+<a href="/contact">Contact</a>
 </nav>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </header>
