--- a/services/external-decorating.html
+++ b/services/external-decorating.html
@@ -55,6 +55,7 @@ footer{padding:20px;text-align:center;color:#666;border-top:1px solid #eee;margi
 </div>
 <div style="display:flex;gap:10px">
 <a class="btn btn-outline" href="/">Home</a>
+<a href="/contact">Contact</a>
 <a class="btn btn-primary" href="tel:07735873694">Call 07735 873694</a>
 </div>
 </header>
