--- a/services/rubbish-removal.html
+++ b/services/rubbish-removal.html
@@ -1,133 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rubbish Removal in Askern & Doncaster | Fast, Affordable Waste Collection</title>
-<meta name="description" content="Professional rubbish removal in Askern, Doncaster. Fast, affordable waste clearance for houses, gardens, garages, sheds and commercial sites. Fully insured local service.">
+<title>Rubbish Removal & Waste Clearance | Askern & Doncaster DN6</title>
+<meta name="description" content="Reliable and affordable rubbish removal and waste clearance in Askern & Doncaster DN6. Household waste, garden waste, single items, bulky items, garage clearances and more. Fast, local service.">
+
 <style>
-body { margin:0; font-family:Arial, sans-serif; line-height:1.6; background:#f8f9fa; color:#222; }
-header { background:#ffffff; border-bottom:1px solid #ddd; padding:15px 20px; display:flex; align-items:center; justify-content:space-between; }
-header .logo { font-size:1.4rem; font-weight:bold; color:#000; text-decoration:none; }
-nav a { margin-left:20px; text-decoration:none; color:#000; font-weight:600; }
-.container { max-width:1200px; margin:0 auto; padding:20px; }
-h1, h2, h3 { color:#111; }
-.section { background:#fff; padding:20px; margin-bottom:20px; border-radius:6px; border:1px solid #e2e2e2; }
-ul { padding-left:20px; }
-.quick-facts { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:15px; }
-.fact-box { background:#f1f1f1; padding:15px; border-radius:6px; border:1px solid #ddd; }
-footer { text-align:center; padding:20px; margin-top:30px; background:#fff; border-top:1px solid #ddd; }
+body {
+margin: 0;
+font-family: Arial, sans-serif;
+background: #ffffff;
+color: #000;
+line-height: 1.6;
+}
+
+header {
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 15px 20px;
+background-color: #f4f4f4;
+border-bottom: 2px solid #ddd;
+}
+
+header .site-title {
+font-size: 26px;
+font-weight: bold;
+}
+
+nav a {
+margin-left: 20px;
+font-size: 18px;
+font-weight: bold;
+text-decoration: none;
+color: #000;
+padding: 10px;
+border-radius: 6px;
+}
+
+nav a:hover {
+background: #e2e2e2;
+}
+
+main {
+padding: 20px;
+max-width: 900px;
+margin: auto;
+}
+
+h1, h2 {
+margin-top: 10px;
+}
+
+.quick-facts {
+background: #f8f8f8;
+padding: 20px;
+border-radius: 10px;
+border: 1px solid #ddd;
+margin: 25px 0;
+}
+
+.quick-facts ul {
+padding-left: 20px;
+}
+
+footer {
+text-align: center;
+padding: 25px;
+font-size: 14px;
+color: #666;
+margin-top: 40px;
+border-top: 1px solid #ddd;
+}
+
+footer a {
+color: #1864d8;
+font-weight: bold;
+text-decoration: none;
+}
+
+footer a:hover {
+text-decoration: underline;
+}
 </style>
-</head>
 
-<body>
-
-<header>
-<a href="/" class="logo">Askern Property Services</a>
-<nav aria-label="Main Navigation">
-<a href="/">Home</a>
-<a href="/services">Services</a>
-<a href="/contact">Contact</a>
-</nav>
-</header>
-
-<div class="container">
-
-<h1>Rubbish Removal in Askern & Doncaster</h1>
-<p>Reliable, fast, and fully insured rubbish removal across <strong>Askern, Doncaster, and surrounding South Yorkshire areas</strong>. I provide affordable, clean and responsible waste clearance for homes, gardens, garages, sheds and commercial properties. All waste is disposed of correctly and legally through approved waste transfer stations.</p>
-
-<div class="section">
-<h2>Rubbish Removal Services</h2>
-<ul>
-<li>Household rubbish removal</li>
-<li>Garden waste & green waste clearance</li>
-<li>Garage, loft & shed clear-outs</li>
-<li>Building rubble & DIY waste removal</li>
-<li>Furniture, appliances & bulky waste collection</li>
-<li>Commercial & business waste removal</li>
-<li>End-of-tenancy clearances</li>
-<li>Fly-tipping clearance</li>
-</ul>
-</div>
-
-<div class="section">
-<h2>Why Choose My Rubbish Removal Services?</h2>
-<ul>
-<li>Local service based in Askern, Doncaster</li>
-<li>Fast response & same-day availability when possible</li>
-<li>Fair pricing with no hidden fees</li>
-<li>Fully insured for waste removal</li>
-<li>Reliable, tidy and respectful service</li>
-<li>Legal disposal at licensed waste centres</li>
-<li>Eco-friendly approach: recycle where possible</li>
-</ul>
-</div>
-
-<div class="section">
-<h2>Quick Facts</h2>
-<div class="quick-facts">
-<div class="fact-box"><strong>Legal & Insured</strong><br>I operate with the correct waste removal insurance.</div>
-<div class="fact-box"><strong>Same-Day Service</strong><br>Often available for urgent clearances.</div>
-<div class="fact-box"><strong>Eco-Friendly</strong><br>Waste is sorted and recycled where possible.</div>
-<div class="fact-box"><strong>No Skip Needed</strong><br>Cheaper, faster and cleaner than hiring a skip.</div>
-</div>
-</div>
-
-<div class="section">
-<h2>FAQs</h2>
-<h3>Do you remove all types of waste?</h3>
-<p>Most household, commercial and garden waste is accepted. Hazardous waste cannot be collected.</p>
-
-<h3>How much does rubbish removal cost?</h3>
-<p>Pricing depends on waste volume, type and access. Quotes are free and straightforward.</p>
-
-<h3>Do I need to bag the waste?</h3>
-<p>No — I handle the loading. Bagging items is optional, not required.</p>
-
-<h3>Is rubbish disposed of legally?</h3>
-<p>Yes. Everything is taken to licensed waste transfer stations with proper disposal practices.</p>
-</div>
-
-<div class="section">
-<h2>Request a Free Quote</h2>
-<form action="https://formspree.io/f/xovqddab" method="POST">
-<label for="name">Your Name</label><br>
-<input type="text" id="name" name="name" required><br><br>
-
-<label for="email">Email Address</label><br>
-<input type="email" id="email" name="email" required><br><br>
-
-<label for="message">Your Message</label><br>
-<textarea id="message" name="message" rows="5" required></textarea><br><br>
-
-<button type="submit">Send Message</button>
-</form>
-</div>
-
-</div>
-
-<footer>
-<p>&copy; 2025 Askern Property Services. All rights reserved.</p>
-</footer>
-
-<!-- SCHEMA -->
+<!-- SERVICE SCHEMA -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
+"@type": "Service",
+"name": "Rubbish Removal & Waste Clearance",
+"serviceType": "Household waste removal, bulky item disposal, garden waste clearance, garage and shed clearances",
+"provider": {
 "@type": "LocalBusiness",
-"name": "Askern Property Services",
-"description": "Rubbish removal and waste clearance services in Askern and Doncaster.",
+"name": "Home Maintenance Services",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "UK"
+},
+"telephone": "+447735873694"
+},
+"areaServed": {
+"@type": "Place",
 "address": {
 "@type": "PostalAddress",
 "addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
+"addressRegion": "Doncaster",
 "addressCountry": "UK"
-},
-"areaServed": "Askern, Doncaster, South Yorkshire",
-"serviceType": "Rubbish Removal"
+}
+}
 }
 </script>
 
+<!-- FAQ SCHEMA -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -135,10 +126,18 @@ footer { text-align:center; padding:20px; margin-top:30px; background:#fff; bord
 "mainEntity": [
 {
 "@type": "Question",
-"name": "Do you remove all types of waste?",
+"name": "What types of rubbish do you remove?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, most domestic, garden and commercial waste is accepted. Hazardous waste is not collected."
+"text": "I remove household waste, bulky items, furniture, garden waste, building waste, garage clutter, sheds contents, boxes, bags, and most general rubbish."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to move the rubbish to the outside?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No — I can collect rubbish from inside your home, garden, garage or shed. I do all the lifting and loading for you."
 }
 },
 {
@@ -146,40 +145,101 @@ footer { text-align:center; padding:20px; margin-top:30px; background:#fff; bord
 "name": "How much does rubbish removal cost?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Pricing varies by volume and waste type. Free quotes available."
+"text": "Prices depend on the amount and type of waste, but I offer fair and affordable rates with free no-obligation quotes."
 }
 },
 {
 "@type": "Question",
-"name": "Do I need to bag the waste?",
+"name": "Which areas do you cover?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "No. Bagging waste is optional; loading is handled."
-}
-},
-{
-"@type": "Question",
-"name": "Is rubbish disposed of legally?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, waste is disposed of through licensed waste transfer stations."
+"text": "I cover Askern, Doncaster DN6 and all surrounding South Yorkshire areas."
 }
 }
 ]
 }
 </script>
 
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "BreadcrumbList",
-"itemListElement": [
-{ "@type": "ListItem", "position": 1, "name": "Home", "item": "/" },
-{ "@type": "ListItem", "position": 2, "name": "Services", "item": "/services" },
-{ "@type": "ListItem", "position": 3, "name": "Rubbish Removal", "item": "/services/rubbish-removal" }
-]
-}
-</script>
+</head>
+
+<body>
+
+<header>
+<div class="site-title">Home Maintenance Services</div>
+<nav>
+<a href="/">Home</a>
+<a href="/services">Services</a>
+<a href="/contact">Contact</a>
+</nav>
+</header>
+
+<main>
+
+<h1>Rubbish Removal & Waste Clearance in Askern & Doncaster (DN6)</h1>
+
+<p>
+I provide fast, reliable and affordable <strong>rubbish removal and waste clearance</strong> across
+<strong>Askern, Doncaster and the DN6 area</strong>. Whether you need a single item collecting or a full garage cleared, I offer a simple, hassle-free service where I do all the lifting and loading for you.
+</p>
+
+<p>
+From household clutter to garden waste and bulky items, your unwanted rubbish can be collected quickly — often on the same day.
+</p>
+
+<h2>Rubbish Removal Services</h2>
+<ul>
+<li>Household waste removal (bags, boxes, old belongings)</li>
+<li>Bulky item disposal (sofas, wardrobes, mattresses)</li>
+<li>Garden waste removal (branches, soil, cuttings)</li>
+<li>Garage & shed clearances</li>
+<li>Old appliances (washing machines, dryers, microwaves)</li>
+<li>DIY & small building waste</li>
+<li>Commercial waste (small loads)</li>
+<li>Single-item pick-ups</li>
+</ul>
+
+<h2>Quick Facts</h2>
+<div class="quick-facts">
+<ul>
+<li>Local rubbish removal service based in <strong>Askern, Doncaster DN6</strong></li>
+<li>Same-day or next-day collections available</li>
+<li>No need to move anything — I handle all the loading</li>
+<li>Household, garden and bulky item removal</li>
+<li>Friendly, reliable and affordable</li>
+<li>No hidden fees — clear pricing before any work</li>
+<li>Fully insured for peace of mind</li>
+</ul>
+</div>
+
+<h2>What I Can Remove</h2>
+<ul>
+<li>Furniture (beds, sofas, tables, wardrobes)</li>
+<li>Electricals & appliances</li>
+<li>General household rubbish and clutter</li>
+<li>Cardboard, packaging and bagged waste</li>
+<li>Garden waste and green waste</li>
+<li>Small amounts of rubble and DIY waste</li>
+</ul>
+
+<h2>Areas I Cover</h2>
+<p>
+Askern, Doncaster, Bentley, Carcroft, Skellow, Adwick, Campsall, Norton, Burghwallis and the wider South Yorkshire area.
+</p>
+
+<h2>Get a Free Rubbish Removal Quote</h2>
+<p>
+If you need rubbish collected quickly and affordably, I’m happy to help. Contact me for a free, no-obligation quote.
+</p>
+
+<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+
+</main>
+
+<footer>
+© 2025 Home Maintenance Services – Askern, Doncaster DN6
+<br><br>
+<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+</footer>
 
 </body>
 </html>
