--- a/services/rubbish-removal.html
+++ b/services/rubbish-removal.html
@@ -1,245 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rubbish Removal & Waste Clearance | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable and affordable rubbish removal and waste clearance in Askern & Doncaster DN6. Household waste, garden waste, single items, bulky items, garage clearances and more. Fast, local service.">
-
+<title>Rubbish Removal in Askern & Doncaster | Fast, Affordable, Fully Insured</title>
+<meta name="description" content="Reliable rubbish removal in Askern, Doncaster and surrounding South Yorkshire areas. Household waste, garden waste, furniture, DIY rubble & more. Fast, affordable & fully insured.">
 <style>
-body {
-margin: 0;
-font-family: Arial, sans-serif;
-background: #ffffff;
-color: #000;
-line-height: 1.6;
-}
-
-header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 15px 20px;
-background-color: #f4f4f4;
-border-bottom: 2px solid #ddd;
-}
-
-header .site-title {
-font-size: 26px;
-font-weight: bold;
-}
-
-nav a {
-margin-left: 20px;
-font-size: 18px;
-font-weight: bold;
-text-decoration: none;
-color: #000;
-padding: 10px;
-border-radius: 6px;
-}
-
-nav a:hover {
-background: #e2e2e2;
-}
-
-main {
-padding: 20px;
-max-width: 900px;
-margin: auto;
-}
-
-h1, h2 {
-margin-top: 10px;
-}
-
-.quick-facts {
-background: #f8f8f8;
-padding: 20px;
-border-radius: 10px;
-border: 1px solid #ddd;
-margin: 25px 0;
-}
-
-.quick-facts ul {
-padding-left: 20px;
-}
-
-footer {
-text-align: center;
-padding: 25px;
-font-size: 14px;
-color: #666;
-margin-top: 40px;
-border-top: 1px solid #ddd;
-}
-
-footer a {
-color: #1864d8;
-font-weight: bold;
-text-decoration: none;
-}
-
-footer a:hover {
-text-decoration: underline;
-}
+body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; background:#f7f7f7; }
+header { background:#fff; padding:20px; border-bottom:1px solid #ddd; display:flex; justify-content:space-between; align-items:center; }
+header img { max-height:55px; width:auto; }
+nav ul { list-style:none; display:flex; gap:20px; margin:0; padding:0; }
+nav a { text-decoration:none; color:#333; font-weight:bold; }
+.container { max-width:1100px; margin:0 auto; padding:20px; }
+h1, h2, h3 { color:#333; }
+.quick-facts { background:#fff; padding:15px; border-radius:6px; margin:20px 0; border-left:4px solid #0078d4; }
+.services-list ul { list-style:disc; margin-left:20px; }
+footer { background:#222; color:#fff; padding:20px; text-align:center; margin-top:40px; }
+.cta { margin-top:30px; padding:20px; background:#fff; border-left:4px solid #28a745; border-radius:6px; }
+a.button { display:inline-block; background:#0078d4; color:#fff; padding:12px 20px; text-decoration:none; border-radius:5px; margin-top:10px; }
 </style>
-
-<!-- SERVICE SCHEMA -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Service",
-"name": "Rubbish Removal & Waste Clearance",
-"serviceType": "Household waste removal, bulky item disposal, garden waste clearance, garage and shed clearances",
-"provider": {
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-},
-"telephone": "+447735873694"
-},
-"areaServed": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"addressCountry": "UK"
-}
-}
-}
-</script>
-
-<!-- FAQ SCHEMA -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "What types of rubbish do you remove?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "I remove household waste, bulky items, furniture, garden waste, building waste, garage clutter, sheds contents, boxes, bags, and most general rubbish."
-}
-},
-{
-"@type": "Question",
-"name": "Do I need to move the rubbish to the outside?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "No — I can collect rubbish from inside your home, garden, garage or shed. I do all the lifting and loading for you."
-}
-},
-{
-"@type": "Question",
-"name": "How much does rubbish removal cost?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Prices depend on the amount and type of waste, but I offer fair and affordable rates with free no-obligation quotes."
-}
-},
-{
-"@type": "Question",
-"name": "Which areas do you cover?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "I cover Askern, Doncaster DN6 and all surrounding South Yorkshire areas."
-}
-}
-]
-}
-</script>
-
 </head>
 
 <body>
 
 <header>
-<div class="site-title">Home Maintenance Services</div>
+<div>
+<img src="/assets/logo.png" alt="Michael Hussey Painting & Decorating Logo">
+</div>
 <nav>
-<a href="/">Home</a>
-<a href="/services">Services</a>
-<a href="/contact">Contact</a>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/services">Services</a></li>
+<li><a href="/contact">Contact</a></li>
+</ul>
 </nav>
 </header>
 
-<main>
+<main class="container">
 
-<h1>Rubbish Removal & Waste Clearance in Askern & Doncaster (DN6)</h1>
+<h1>Rubbish Removal in Askern & Doncaster</h1>
+<p>I provide fast, affordable and fully insured rubbish removal services throughout <strong>Askern, Doncaster and surrounding South Yorkshire areas</strong>. Whether you need household waste clearing, garden waste removed, bulk rubbish taken away or a full property clean-out — you can count on a reliable, tidy and legally compliant service.</p>
 
-<p>
-I provide fast, reliable and affordable <strong>rubbish removal and waste clearance</strong> across
-<strong>Askern, Doncaster and the DN6 area</strong>. Whether you need a single item collecting or a full garage cleared, I offer a simple, hassle-free service where I do all the lifting and loading for you.
-</p>
-
-<p>
-From household clutter to garden waste and bulky items, your unwanted rubbish can be collected quickly — often on the same day.
-</p>
-
-<h2>Rubbish Removal Services</h2>
-<ul>
-<li>Household waste removal (bags, boxes, old belongings)</li>
-<li>Bulky item disposal (sofas, wardrobes, mattresses)</li>
-<li>Garden waste removal (branches, soil, cuttings)</li>
-<li>Garage & shed clearances</li>
-<li>Old appliances (washing machines, dryers, microwaves)</li>
-<li>DIY & small building waste</li>
-<li>Commercial waste (small loads)</li>
-<li>Single-item pick-ups</li>
-</ul>
-
+<section class="quick-facts">
 <h2>Quick Facts</h2>
-<div class="quick-facts">
 <ul>
-<li>Local rubbish removal service based in <strong>Askern, Doncaster DN6</strong></li>
-<li>Same-day or next-day collections available</li>
-<li>No need to move anything — I handle all the loading</li>
-<li>Household, garden and bulky item removal</li>
-<li>Friendly, reliable and affordable</li>
-<li>No hidden fees — clear pricing before any work</li>
-<li>Fully insured for peace of mind</li>
+<li>✔ Fully licensed & insured waste carrier</li>
+<li>✔ Same-day or next-day service available</li>
+<li>✔ Cheaper & easier than hiring a skip</li>
+<li>✔ All waste is disposed of responsibly</li>
+<li>✔ Ideal for homes, landlords, tenants & businesses</li>
 </ul>
+</section>
+
+<section class="services-list">
+<h2>Rubbish Removal Services</h2>
+<p>I handle all types of non-hazardous waste removal, including but not limited to:</p>
+<ul>
+<li>Household waste & unwanted items</li>
+<li>Garden waste, soil, hedge trimmings, branches</li>
+<li>Old furniture, mattresses & appliances</li>
+<li>Shed & garage clearances</li>
+<li>DIY & builders’ rubble</li>
+<li>End-of-tenancy waste removal</li>
+<li>Bagged waste & fly-tipped rubbish</li>
+<li>Light commercial waste</li>
+</ul>
+</section>
+
+<section>
+<h2>Why Choose My Rubbish Removal Service?</h2>
+<p>Unlike skip hire, you only pay for what is removed, and everything is loaded for you. I provide a clean, responsible and affordable solution for clearing clutter and waste, without hassle.</p>
+<ul>
+<li>Professional, friendly and reliable service</li>
+<li>No hidden fees — clear, honest pricing</li>
+<li>Responsible waste transfer to licensed facilities</li>
+<li>Perfect for quick clean-ups and bulky items</li>
+</ul>
+</section>
+
+<section>
+<h2>Areas Covered</h2>
+<p>I provide rubbish removal in:</p>
+<ul>
+<li>Askern</li>
+<li>Doncaster</li>
+<li>Norton</li>
+<li>Campsall</li>
+<li>Carcroft</li>
+<li>Bentley</li>
+<li>Skellow</li>
+<li>Adwick</li>
+<li>All surrounding South Yorkshire areas</li>
+</ul>
+</section>
+
+<section>
+<h2>Frequently Asked Questions</h2>
+<h3>How much does rubbish removal cost?</h3>
+<p>It depends on the amount and type of waste. I offer clear pricing with no surprises — usually much cheaper than skip hire.</p>
+
+<h3>Do I need to bag everything?</h3>
+<p>No — I can remove loose items, furniture and bulky waste. Bagged waste is also fine.</p>
+
+<h3>Are you licensed?</h3>
+<p>Yes — I operate as a fully licensed and insured waste carrier, ensuring legal and responsible disposal.</p>
+
+<h3>Can you remove commercial waste?</h3>
+<p>Yes, I handle small business, shop and office waste as long as it is non-hazardous.</p>
+</section>
+
+<div class="cta">
+<h2>Request a Free Quote</h2>
+<p>Tell me what you need removed and I’ll provide a fast, fair and honest quote.</p>
+<a class="button" href="/contact">Get a Free Quote</a>
 </div>
-
-<h2>What I Can Remove</h2>
-<ul>
-<li>Furniture (beds, sofas, tables, wardrobes)</li>
-<li>Electricals & appliances</li>
-<li>General household rubbish and clutter</li>
-<li>Cardboard, packaging and bagged waste</li>
-<li>Garden waste and green waste</li>
-<li>Small amounts of rubble and DIY waste</li>
-</ul>
-
-<h2>Areas I Cover</h2>
-<p>
-Askern, Doncaster, Bentley, Carcroft, Skellow, Adwick, Campsall, Norton, Burghwallis and the wider South Yorkshire area.
-</p>
-
-<h2>Get a Free Rubbish Removal Quote</h2>
-<p>
-If you need rubbish collected quickly and affordably, I’m happy to help. Contact me for a free, no-obligation quote.
-</p>
-
-<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
 <footer>
-© 2025 Home Maintenance Services – Askern, Doncaster DN6
-<br><br>
-<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+<p>&copy; 2025 Michael Hussey – Rubbish Removal & Property Services | Askern, Doncaster</p>
 </footer>
+
+<!-- STRUCTURED DATA -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Michael Hussey Rubbish Removal",
+"image": "/assets/logo.png",
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"addressCountry": "UK"
+},
+"description": "Fast, affordable rubbish removal in Askern and Doncaster. Household waste, garden waste, furniture, DIY rubble and more.",
+"url": "https://yourwebsite.com/services/rubbish-removal",
+"areaServed": "Askern, Doncaster, South Yorkshire",
+"serviceType": "Rubbish Removal"
+}
+</script>
 
 </body>
 </html>
