--- a/services/rubbish-removal.html
+++ b/services/rubbish-removal.html
@@ -25,7 +25,7 @@ a.button { display:inline-block; background:#0078d4; color:#fff; padding:12px 20
 
 <header>
 <div>
-<img src="/assets/logo.png" alt="Home Maintenance Doncaster">
+<img src="/logo.png" alt="Home Maintenance Doncaster">
 </div>
 <nav>
 <ul>
