--- a/index.html
+++ b/index.html
@@ -1,310 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Handyman & Home Maintenance Services | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable handyman and home maintenance services in Askern & Doncaster DN6. Repairs, gutter work, decorating, garden jobs, installations and more. Local, affordable and friendly service.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Professional property services in Askern & Doncaster including painting, decorating, pressure washing, and more. Reliable, insured, friendly and competitively priced.">
+<meta name="author" content="Askern Property Services">
+<link rel="preload" href="/logo.png" as="image">
 
-<!-- Accessible, fast, clean design -->
+<title>Askern Property Services</title>
+
 <style>
+/* Reset */
+*, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
+
 body {
-margin: 0;
-font-family: Arial, sans-serif;
-background: #ffffff;
-color: #000;
+font-family: system-ui, sans-serif;
 line-height: 1.6;
+color: #222;
+background: #fff;
 }
 
+/* Header layout */
 header {
+width: 100%;
+background: #fafafa;
+border-bottom: 1px solid #e1e1e1;
+padding: 10px 20px;
 display: flex;
 justify-content: space-between;
 align-items: center;
-padding: 15px 20px;
-background-color: #f4f4f4;
-border-bottom: 2px solid #ddd;
 }
 
 header img {
 height: 90px;
+width: auto;
 }
 
-.home-link, .call-button {
-font-size: 18px;
-font-weight: bold;
-text-decoration: none;
-border-radius: 6px;
-padding: 10px 18px;
-display: inline-block;
-}
-
-.home-link {
-color: #000;
-border: 2px solid #000;
-}
-
-.home-link:hover {
-background: #e2e2e2;
-}
-
-.call-button {
-background-color: #1a7f33;
-color: #ffffff;
-}
-
-.call-button:hover {
-background-color: #166b2b;
-}
-
-main {
-padding: 20px;
-max-width: 900px;
-margin: auto;
-}
-
-h1, h2 {
-margin-top: 10px;
-}
-
-.service-list a {
+nav {
 display: flex;
-align-items: center;
-background: #f8f8f8;
-padding: 14px 18px;
-margin: 12px 0;
-border-radius: 8px;
-border: 1px solid #ddd;
+gap: 25px;
+font-size: 1.1rem;
+}
+
+nav a {
 text-decoration: none;
-color: #000;
-font-size: 17px;
-font-weight: bold;
-transition: 0.25s;
+color: #222;
+font-weight: 600;
 }
 
-.service-list a:hover {
-background: #e8ffe8;
-border-color: #28a745;
-transform: translateX(4px);
-}
-
-.icon {
-font-size: 22px;
-width: 35px;
-display: inline-block;
-}
-
-.contact-form {
-margin-top: 30px;
-padding: 20px;
-background: #f4f4f4;
-border-radius: 10px;
-border: 1px solid #ddd;
-}
-
-.contact-form label {
-font-weight: bold;
-}
-
-.contact-form input,
-.contact-form textarea {
-width: 100%;
-padding: 12px;
-margin: 8px 0 20px;
-border: 1px solid #ccc;
-border-radius: 6px;
-font-size: 16px;
-}
-
-.contact-form button {
-background-color: #1a7f33;
-color: #fff;
-padding: 14px 25px;
-border: none;
-border-radius: 6px;
-font-size: 18px;
-cursor: pointer;
-}
-
-.contact-form button:hover {
-background-color: #166b2b;
-}
-
-footer {
-text-align: center;
-padding: 25px;
-font-size: 14px;
-color: #666;
-margin-top: 40px;
-border-top: 1px solid #ddd;
-}
-
-footer a {
-color: #1864d8;
-font-weight: bold;
-text-decoration: none;
-}
-
-footer a:hover {
+nav a:hover {
 text-decoration: underline;
 }
 
-.hidden-field {
-display: none !important;
+.call-btn a {
+background: #28a745;
+padding: 10px 18px;
+color: #fff;
+border-radius: 6px;
+font-weight: 700;
+text-decoration: none;
+display: inline-block;
+}
+
+.call-btn a:hover {
+background: #218838;
+}
+
+/* Footer */
+footer {
+background: #111;
+color: #eee;
+text-align: center;
+padding: 35px 20px;
+margin-top: 50px;
+}
+
+footer p {
+margin-bottom: 8px;
+}
+
+/* Mobile */
+@media (max-width: 780px) {
+header {
+flex-direction: column;
+gap: 15px;
+text-align: center;
+}
+nav {
+flex-wrap: wrap;
+justify-content: center;
+}
+.call-btn {
+margin-top: 5px;
+}
 }
 </style>
 
-<!-- SCHEMA.ORG: LocalBusiness + FAQ + BreadcrumbList -->
+<!-- ORGANISATION SCHEMA (SEO BOOST) -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"image": "https://steely1968.github.io/logo.png",
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"priceRange": "£",
+"name": "Askern Property Services",
+"image": "/logo.png",
 "address": {
 "@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
 "addressLocality": "Askern",
 "addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
 "addressCountry": "UK"
 },
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.616,
-"longitude": -1.153
-},
-"openingHoursSpecification": [{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens": "08:00",
-"closes": "18:00"
-}]
+"url": "https://yourwebsite.co.uk",
+"telephone": "+447000000000",
+"servesLocation": ["Askern", "Doncaster", "Campsall", "Norton", "South Yorkshire"],
+"description": "Professional painting, decorating, pressure washing and domestic property services in Askern and Doncaster."
 }
 </script>
-
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "BreadcrumbList",
-"itemListElement": [
-{
-"@type": "ListItem",
-"position": 1,
-"name": "Home",
-"item": "https://steely1968.github.io/"
-}
-]
-}
-</script>
-
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "Which areas do you cover?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "I cover all of Askern and the wider Doncaster DN6 region."
-}
-},
-{
-"@type": "Question",
-"name": "Do you do small jobs?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes — no job is too small. From hanging shelves to fixing leaks, I can help."
-}
-},
-{
-"@type": "Question",
-"name": "Do you charge a call-out fee?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "No, I never charge a call-out fee."
-}
-}
-]
-}
-</script>
-
 </head>
 
 <body>
 
-<header>
-<img src="logo.png" alt="Home Maintenance Services Logo">
-<a class="home-link" href="/" aria-label="Return to homepage">Home</a>
-<a href="tel:07735873694" class="call-button" aria-label="Call Home Maintenance Services">Call 07735 873694</a>
+<header aria-label="Main Website Header">
+<a href="/" aria-label="Home">
+<img src="/logo.png" alt="Askern Property Services Logo" loading="lazy" height="90">
+</a>
+
+<nav aria-label="Main Navigation">
+<a href="/">Home</a>
+<a href="/services">Services</a>
+<a href="/contact">Contact</a>
+</nav>
+
+<div class="call-btn">
+<a href="tel:+447000000000" aria-label="Call Now">Call Now</a>
+</div>
 </header>
 
-<main>
+<!-- PAGE CONTENT WILL GO HERE -->
 
-<h1>Handyman & Home Maintenance Services in Askern & Doncaster (DN6)</h1>
-
-<p>I provide reliable, friendly and affordable handyman services across Askern and the wider Doncaster DN6 region. No job is too small — I handle repairs, maintenance, installations, outdoor work and more.</p>
-
-<h2>Services I Provide</h2>
-
-<div class="service-list">
-
-<a href="/services/general-home-repairs"><span class="icon">🔧</span>General home repairs & maintenance</a>
-<a href="/services/painting-decorating"><span class="icon">🎨</span>Painting, decorating & plaster patching</a>
-<a href="/services/external-decorating"><span class="icon">🏠</span>External house painting</a>
-<a href="/services/joinery-carpentry"><span class="icon">🪚</span>Joinery & small carpentry tasks</a>
-<a href="/services/flat-pack-assembly"><span class="icon">📦</span>Flat-pack assembly</a>
-<a href="/services/gutter-clearing"><span class="icon">🪜</span>Gutter clearing & cleaning</a>
-<a href="/services/gutter-repair-replacement"><span class="icon">🔩</span>Gutter repairs & replacements</a>
-<a href="/services/garden-maintenance"><span class="icon">🌿</span>Garden tidy-ups</a>
-<a href="/services/hanging-installations"><span class="icon">🖼️</span>Hanging blinds, mirrors & TV brackets</a>
-<a href="/services/pressure-washing"><span class="icon">🚰</span>Pressure Jet Washing</a>
-<a href="/services/rubbish-removal"><span class="icon">🗑️</span>Rubbish removal & small clearances</a>
-
-</div>
-
-<h2>Why Choose Me?</h2>
-<ul>
-<li>Local Askern handyman — fast, friendly service</li>
-<li>No call-out fee</li>
-<li>Fair, honest pricing</li>
-<li>Tidy, reliable and professional</li>
-<li>Most small jobs completed the same day</li>
-</ul>
-
-<h2>Contact Me</h2>
-
-<form class="contact-form" action="https://formsubmit.co/martinsteel940@gmail.com" method="POST">
-<input type="hidden" name="_captcha" value="false">
-<input type="hidden" name="_template" value="table">
-<input type="hidden" name="_next" value="https://steely1968.github.io/thank-you.html">
-
-<input type="text" name="_honey" class="hidden-field">
-
-<label for="name">Your Name:</label>
-<input type="text" id="name" name="name" autocomplete="name" required>
-
-<label for="phone">Phone Number:</label>
-<input type="tel" id="phone" name="phone" autocomplete="tel" required>
-
-<label for="message">Your Message:</label>
-<textarea id="message" name="message" rows="6" required></textarea>
-
-<button type="submit">Send Message</button>
-</form>
-
-</main>
-
-<footer>
-© 2025 Home Maintenance Services – Askern, Doncaster DN6
-<br><br>
-<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+<footer aria-label="Website Footer">
+<p>&copy; <span id="year"></span> Askern Property Services — All Rights Reserved.</p>
+<p>Professional Property Services in Askern & Doncaster</p>
 </footer>
+
+<script>
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
