--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ margin-top: 5px;
 {
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
-"name": "Askern Property Services",
+"name": "Doncaster Property Services",
 "image": "/logo.png",
 "address": {
 "@type": "PostalAddress",
@@ -110,9 +110,9 @@ margin-top: 5px;
 "addressCountry": "UK"
 },
 "url": "https://yourwebsite.co.uk",
-"telephone": "+447000000000",
+"telephone": "+447735873694",
 "servesLocation": ["Askern", "Doncaster", "Campsall", "Norton", "South Yorkshire"],
-"description": "Professional painting, decorating, pressure washing and domestic property services in Askern and Doncaster."
+"description": "Professional guttering, fencing, painting, decorating, pressure washing and domestic property services in Askern and Doncaster."
 }
 </script>
 </head>
@@ -131,7 +131,7 @@ margin-top: 5px;
 </nav>
 
 <div class="call-btn">
-<a href="tel:+447000000000" aria-label="Call Now">Call Now</a>
+<a href="tel:+4477873694" aria-label="Call Now">Call Now</a>
 </div>
 </header>
 
